# dune-dycap

./: CMakeLists.txt  README.md  config.h.cmake  dune-dycap.pc.in  dune.module
appl/: CMakeLists.txt
appl/dfz_experiment/: CMakeLists.txt  Makefile.am  ecoli_dfz.conf  ecoli_dfz_inflow.conf  ecolimodel.conf  reaction_model.hh  simulation_boilerplate.cc
appl/nanoparticles/: CMakeLists.txt  Makefile.am  Readme.txt  estimation.cc  estimation.conf  fitdataclass.hh  fitmodel.hh  model.hh  reaction_model.hh  tracer.conf  transportparameters.hh
appl/nanoparticles/data/: AdsorptionsVersuche.xls  CMakeLists.txt  data.gnumeric
appl/nanoparticles/parameters/: CMakeLists.txt
appl/nanoparticles/utilities/: CMakeLists.txt  output.gpl  run.sh  tracer.gpl
appl/phase_exchange/: CMakeLists.txt  create_figures.sh  exchange.cc  exchange.eps  exchange.gpl  exchange.ini  linestyle.gp
appl/phase_exchange/doc/: CMakeLists.txt  interfacial_area.tex  phase_exchange.tex  references.bib
appl/turing/: CMakeLists.txt  componentparameters.hh  initial_conditions.hh  local_operator.hh  reactionadapter.hh  timemanager.hh  turing_current.cc
appl/twophase_test/: CMakeLists.txt  twophase_boilerplate.cc  twophase_boilerplate.ini  twophase_parallel.cc
cmake/modules/: AddGSLFlags.cmake  CMakeLists.txt  DuneDycapMacros.cmake  FindGSL.cmake
doc/doxygen/: Doxylocal
src/: CMakeLists.txt
src/boilerplate/: CMakeLists.txt  multicomponenttransportsolver.hh  transportsolver.hh  twophasesolver_pcpl.hh  twophasevelocity.hh
src/estimation/: CMakeLists.txt  compiler.h  fit_ecoli_model_base.hh  fitclass.hh  gaussnewton.hh  iterativefitclass.hh  levemberg_marquardt.hh  units.hh  utilities.hh
src/models/: CMakeLists.txt  Makefile.am  adroperator.hh  componenttransportop.hh  componenttransportop_nocflcontroller.hh  convectiondiffusiondg.hh  defaultimp.hh  fluxreconstruction.hh  limiter.hh  multicomponenttransportop.hh  pcpl_twophaseccfv.hh  pcpl_twophaseccfv_incompressible.hh  pcpl_twophaseccfv_totalflux.hh  plsg_twophaseccfv.hh  reaction_ode_models.hh  reactionop.hh  reactiontransportop.hh  transporttraits.hh  twophaseccfv.hh  twophasetraits.hh  twophasevelocity.hh  twosidedimp.hh
src/newton/: CMakeLists.txt  hnewton.hh  newton.hh  newton_base.hh  newton_reaction.hh  newton_utilities.hh
src/ode/: CMakeLists.txt  ode.hh  odegridoperator.hh
src/output/: CMakeLists.txt  basicio.hh  genericcomponentoutput.hh  gnuplot.hh  output.hh  pvdwriter.hh  pvdwriter_debug.hh  solutioncut.hh  solutiontimeoutput.hh  timestepoutput.hh
src/output/gnuplot_script/: comparison.dem  comparison_solution.dem  ecoli_growth.dem  gnuplot_experiment1.dem  linestyle.gp
src/output/python_script/: pv-screenshot  test.py
src/output/shell_script/: dycap_x1.sh  ecoli.sh  picture.sh
src/parameters/: CMakeLists.txt  heleshawdomain.hh  multitransportparameters.hh  plpc.hh  plpg.hh  plsg.hh  problem_transport.hh  reactionparameters.hh  transportparameters.hh  twophaseparameters.hh
src/physics/: CMakeLists.txt  hydraulicparameters.hh  integration_utilities.hh  interpolation.h  physical_chemistry.cc  physical_chemistry.hh  soilwatercharacteristics.hh
src/utilities/: CMakeLists.txt  adhesion.hh  cfltransportcontroller.hh  concentration_utilities.hh  controller.hh  gridfunction_utilities.hh  gridinfo.hh  imex.hh  inlets_utilities.hh  inlets_utilities_old.hh  interpolate.hh  multispan.hh  multispantwophase.hh  onestepmethods.hh  parser.hh  residuum.hh  rownorm_preconditioner.hh  rt0qfem.hh  time_step_manager.hh  timer.hh  utilities.hh
