modelsincludedir = $(includedir)/dune/dycap/models
modelsinclude_HEADERS =		\
componenttransportop.hh		\
componenttransportop_nocflcontroller.hh \
fluxreconstruction.hh	\
pcpl_twophaseccfv.hh 	\
pcpl_twophaseccfv_incompressible.hh 	\
pcpl_twophaseccfv_totalflux.hh 	\
plsg_twophaseccfv.hh \
reactionop.hh \
reactiontransportop.hh \
twophaseccfv.hh 	\
twophasetraits.hh \
twophasevelocity.hh \
twosidedimp.hh

include $(top_srcdir)/am/global-rules
